[package]
authors = ["Buck McCready <jbuckmccready@gmail.com>"]
categories = ["algorithms", "data-structures", "graphics", "mathematics"]
description = "2D polyline/shape library for offsetting, combining, etc."
edition = "2021"
keywords = ["algorithm", "2d", "computational", "geometry", "spatial"]
license = "MIT OR Apache-2.0"
name = "cavalier_contours"
readme = "../README.md"
repository = "https://github.com/jbuckmccready/cavalier_contours"
version = "0.4.0"

[features]
default = []
# Enable serde serialize/deserialize for polylines and vertexes
serde = ["dep:serde"]
# Enable unsafe optimizations in the static_aabb2d_index dependency
unsafe_optimizations = ["static_aabb2d_index/unsafe_optimizations"]

[dependencies]
